[package]
name = "base62"
version = "2.1.0"
authors = [
    "François Bernier <frankbernier@gmail.com>",
    "Chai T. Rex <ChaiTRex@users.noreply.github.com>",
    "Kevin Darlington <kevin@outroot.com>",
    "Christopher Tarquini <code@tarq.io>",
]
edition = "2018"
description = "A Base62 encoding/decoding library"
documentation = "https://docs.rs/base62/"
homepage = "https://github.com/fbernier/base62"
repository = "https://github.com/fbernier/base62"
readme = "README.md"
keywords = ["base62", "encoding", "decoding", "url", "shortener"]
license = "MIT"
exclude = [
    ".github/*",
]

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]

[dependencies]
rustversion = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
quickcheck = "1"
rand = "0.8"

[[bench]]
name = "base62"
harness = false
